--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.example.smarthome">
 
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the 'MyLocation' functionality.
+    -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -12,6 +17,19 @@
             android:roundIcon="@drawable/home_selected"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/.
+        -->
+        <meta-data
+                android:name="com.google.android.geo.API_KEY"
+                android:value="AIzaSyBCOUwmD6HsEkxVrScrzv-TRsJhBKvtQd8"/>
+
         <activity android:name=".AddActivity">
         </activity>
         <activity android:name=".RegistrationActivity">
@@ -23,13 +41,6 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
-        <meta-data
-                android:name="com.google.android.gms.version"
-                android:value="@integer/google_play_services_version"/> <!-- The API key for Google Maps-based APIs. -->
-        <meta-data
-                android:name="com.google.android.geo.API_KEY"
-                android:value="AIzaSyBCOUwmD6HsEkxVrScrzv-TRsJhBKvtQd8"/>
 
         <activity android:name=".MainActivity">
         </activity>
